# vision-background-removal

./: .gitignore  CMakeLists.txt  README.md  install.sh  package-installer.sh
.github/scripts/: build-macos.sh
cmake/: Info.plist.in
data/locale/: de-DE.ini  en-US.ini
docs/: setup-guide.html
src/: background-removal-filter.h  background-removal-filter.mm  plugin-main.h  plugin-main.mm  vision-processor.h  vision-processor.mm
